Two versions of the postgres url in app properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-# Configuration file
-# key = value
 # Adding the db-kind fixed that long and weird error that I could not figure out
 # turns out there was a log line further up saying that no jdbc was defined
 quarkus.datasource.db-kind=postgresql
+# Use the version below when running on localhost
 #quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/mytestdb
+# Use the version below when running docker-compose
 quarkus.datasource.jdbc.url=jdbc:postgresql://postgres/mytestdb
 quarkus.datasource.username=admin
 quarkus.datasource.password=admin
